crates/float-macro/tests/compile_fail/dot_only.rs
use st0x_float_macro::float;

fn main() {
    // A lone dot is not a valid number
    let _ = float!(.);
}
